force-app/main/default/objects/Product2/fields/Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>Asset_Class__c</fullName>
    <label>Asset Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Sozialimmobilien</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>