force-app/main/default/objects/Product2/fields/Bank_BIC__c.field-meta.xml
<CustomField>
    <fullName>Bank_BIC__c</fullName>
    <label>Bank BIC</label>
    <length>120</length>
    <type>Text</type>
</CustomField>