force-app/main/default/objects/Product2/fields/Bank_IBAN__c.field-meta.xml
<CustomField>
    <fullName>Bank_IBAN__c</fullName>
    <label>Bank IBAN</label>
    <length>120</length>
    <type>Text</type>
</CustomField>