force-app/main/default/objects/Product2/fields/Current_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total Amount invested</inlineHelpText>
    <label>Current Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>