force-app/main/default/objects/Product2/fields/Duration_in_months__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_months__c</fullName>
    <label>Duration (in months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>