force-app/main/default/objects/Product2/fields/Expected_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Expected_Distribution__c</fullName>
    <label>Expected Distribution</label>
    <length>80</length>
    <type>Text</type>
</CustomField>