force-app/main/default/objects/Product2/fields/Financing_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Financing_Purpose__c</fullName>
    <label>Financing Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>