force-app/main/default/objects/Product2/fields/Fund_Structure__c.field-meta.xml
<CustomField>
    <fullName>Fund_Structure__c</fullName>
    <label>Fund Structure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>