force-app/main/default/objects/Product2/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest</label>
    <length>80</length>
    <type>Text</type>
</CustomField>