force-app/main/default/objects/Product2/fields/Investment_Availability_Date__c.field-meta.xml
<CustomField>
    <fullName>Investment_Availability_Date__c</fullName>
    <label>Investment Availability Date</label>
    <type>DateTime</type>
</CustomField>