force-app/main/default/objects/Product2/fields/Investment_Class__c.field-meta.xml
<CustomField>
    <fullName>Investment_Class__c</fullName>
    <label>Investment Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bridging</fullName>
            </value>
            <value>
                <fullName>geschlossener Spezial-AIF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>