force-app/main/default/objects/Product2/fields/Own_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Own_Contribution__c</fullName>
    <label>Own Contribution</label>
    <length>80</length>
    <type>Text</type>
</CustomField>