force-app/main/default/objects/Product2/fields/Repayment__c.field-meta.xml
<CustomField>
    <fullName>Repayment__c</fullName>
    <label>Repayment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>