force-app/main/default/objects/Product2/fields/Reserved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Amount__c</fullName>
    <inlineHelpText>Amount yet to be invested</inlineHelpText>
    <label>Reserved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>