force-app/main/default/objects/Product2/fields/Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Street_Number__c</fullName>
    <label>Street Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>