force-app/main/default/objects/Product2/fields/Type_Of_Use__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Use__c</fullName>
    <label>Type Of Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>