force-app/main/default/objects/Product2/fields/Update_Website__c.field-meta.xml
<CustomField>
    <fullName>Update_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Website</label>
    <type>Checkbox</type>
</CustomField>