force-app/main/default/objects/Product2/recordTypes/Investment_Product.recordType-meta.xml
<RecordType>
    <fullName>Investment_Product</fullName>
    <active>true</active>
    <label>Investment Product</label>
</RecordType>